# travel_map

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py  models.py
backend/app/renderer/: fonts.py  labels.py  photos.py  pipeline.py  route.py  styles.py  tiles.py
backend/app/routers/: geocode.py  render.py  settings.py  stops.py  trips.py
backend/app/services/: geocode_service.py  photo_service.py  render_service.py  routing_service.py  trip_service.py
backend/tests/: conftest.py  test_geocode.py  test_pipeline_helpers.py  test_render.py  test_routing_service.py  test_stops.py  test_trips.py
backend/tests/fixtures/: sample_trip.yaml
backend/tests/test_renderer/: test_labels.py  test_photos.py  test_route.py  test_tiles.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AddStop.tsx  MapPanel.tsx  RenderModal.tsx  SettingsDrawer.tsx  StopList.tsx  StopRow.tsx  StylePicker.tsx  TripCard.tsx
frontend/src/components/ui/: Button.tsx  ConfirmDialog.tsx  Drawer.tsx  Input.tsx  Modal.tsx  Spinner.tsx  Toast.tsx
frontend/src/hooks/: useGeocode.ts  useRender.ts  useTrip.ts
frontend/src/lib/: constants.ts  types.ts
frontend/src/pages/: TripEditor.tsx  TripList.tsx
frontend/src/stores/: settingsStore.ts  tripStore.ts
scripts/: dev.sh  seed.py
